Fix footer spacing

--- a/themes/osuosl/assets/css/style.css
+++ b/themes/osuosl/assets/css/style.css
@@ -672,7 +672,7 @@ textarea {
     Footer
 */
 .footer {
-    padding: 10px 25px;
+    padding: 10px 0;
     font-size: 0.85rem;
     color: white;
     background: #2a2a2a;
@@ -684,9 +684,9 @@ textarea {
     flex-flow: row wrap;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 976px;
 }
 
 .footer__links {
